data/diff_tests/wasmtime/call_indirect_IncorrectHandlingofControlFlowAcrossModuleBoundaries_4761.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\02\89\80\80\80\00\01\03\65\6e"
    "\76\01\66\00\00\03\82\80\80\80\00\01\01\04\84\80"
    "\80\80\00\01\70\00\01\09\87\80\80\80\00\01\00\41"
    "\00\0b\01\00\0a\8f\80\80\80\00\01\89\80\80\80\00"
    "\00\41\00\41\01\11\00\00\0b"
  )
""
)